--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack -p",
     "dev": "webpack-dev-server --hot --inline",
-    "start": "node ./src/index.js"
+    "start": "node ./src/App.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
