--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "prod": "NODE_ENV=production node server.js",
+    "postinstall": "webpack -p",
     "build": "webpack -p",
-    "dev": "webpack-dev-server --hot --inline",
-    "start": "node ./src/App.js"
+    "dev": "webpack-dev-server --hot --inline"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -17,6 +19,7 @@
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
+    "express": "^4.16.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
