--- a/package.json
+++ b/package.json
@@ -24,15 +24,22 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.2",
     "css-loader": "^0.28.9",
+    "foreman": "^2.0.0",
+    "marked": "^0.3.17",
+    "mongoose": "^5.0.9",
     "node-sass": "^4.7.2",
+    "nodemon": "^1.17.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sass-loader": "^6.0.6",
+    "save": "^2.3.2",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
